force-app/main/default/objects/Sample_Allocation_Team__c/Sample_Allocation_Team__c.object-meta.xml
<CustomObject>
    <label>Sample Allocation Team</label>
    <nameField>
        <label>Sample Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>