force-app/main/default/objects/Sample_Allocation_Team__c/fields/Sample_Assignment_Team__c.field-meta.xml
<CustomField>
    <fullName>Sample_Assignment_Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sample Assignment Team</label>
    <referenceTo>Sample_Assignment_Team__c</referenceTo>
    <relationshipLabel>Sample Allocation Team</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>