force-app/main/default/objects/Sample_Allocation_Team__c/fields/Sample_Assignment_Team_Type__c.field-meta.xml
<CustomField>
    <fullName>Sample_Assignment_Team_Type__c</fullName>
    <formula>TEXT(Sample_Assignment_Team__r.Team_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Assignment Team Type</label>
    <type>Text</type>
</CustomField>